# SKALA_AIAgent_MProject

./: README.md  pyproject.toml  report_mongolia_digital_siganage  report_united_logistic.md  requirements.txt
config/: settings.example.yaml  sources.yaml
data/outputs/: report_Mongolia_3PL_20251023_151702.html  report_Mongolia_3PL_20251023_151702.md  report_Mongolia_Logistics_20251023_152125.html  report_Mongolia_Logistics_20251023_152125.md  report_Mongolia_digital_signage_20251023_112742.html  report_Mongolia_digital_signage_20251023_112742.md
graph/: builder.py  logging_utils.py  state.py
graph/nodes/: barrier_extractor.py  company_profile.py  competition_analyzer.py  competitive_analysis.py  country_market_research.py  decision_flow_controller.py  entry_strategy.py  insight_integrator.py  law_analyzer.py  market_analyzer.py  partner_sourcing.py  reference_loader.py  report_writer.py
prompts/: ai_strategy.md  barriers.md  competition_analysis.md  competition_guideline.md  competitive_landscape.md  decision_flow.md  entry_assessment.md  entry_modes.md  entry_strategy.md  ksf.md  law_guideline.md  market_guideline.md  market_overview.md  next_steps.md  risk_management.md  summary.md
scripts/: run_insights.py  run_report.py
templates/: report.html  styles.css
tests/: test_barrier_extractor.py  test_decision_flow.py  test_integrator.py  test_parsing.py  test_scoring.py
tools/: company_profile.py  export.py  fetchers.py  llm.py  parsing.py  reference_loader.py  scoring.py  templating.py  web_search.py
tools/sources/: worldbank.py
