[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "m-medss"
version = "0.1.0"
description = "Multinational Market Insight & Strategy Agents"
requires-python = ">=3.10"
dependencies = [
  "langgraph>=0.2",
  "langchain>=0.2",
  "httpx>=0.27",
  "PyYAML>=6.0",
  "beautifulsoup4>=4.12",
  "lxml>=5.2",
  "pandas>=2.2",
  "Jinja2>=3.1",
  "markdown>=3.6",
]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["agents*", "graph*", "shared*", "domain*", "scripts*"]
exclude = ["data*", "tests*", "templates*", "prompts*"]
